Add state transition functionality
- Introduced StateTransitionsController to manage state transitions.
- Created StateTransition model with associations and analytics methods.
- Implemented HasStateTransitions concern for articles and comments to track state changes.
- Added state transition policy for authorization.
- Developed index view for displaying state transitions.
- Updated routes and hypermedia actions for state transitions.
- Created migration for state_transitions table in the database.

--- a/config/hypermedia_actions.yml
+++ b/config/hypermedia_actions.yml
@@ -202,6 +202,13 @@ Navigation:
     method: 'GET'
     link: '/comments/pending_comments'
     button_classes: 'btn btn-outline-primary btn-sm mx-1'
+
+  state_transitions:
+    rel: 'state-transitions'
+    title: 'State Transitions'
+    method: 'GET'
+    link: '/state_transitions'
+    button_classes: 'btn btn-outline-primary btn-sm mx-1'
   
   sign_in:
     rel: 'sign-in'
