Add rejection feedback functionality for articles and comments
- Introduced rejection feedback field in Article and Comment models.
- Updated controllers to handle rejection feedback submission and display.
- Added views for rejection feedback forms for both articles and comments.
- Enhanced blueprints to include rejection feedback in serialized responses.
- Updated routes and hypermedia actions to support new rejection feedback feature.

--- a/config/hypermedia_actions.yml
+++ b/config/hypermedia_actions.yml
@@ -52,8 +52,8 @@ Article:
   reject:
     rel: 'transition:reject'
     title: 'Reject'
-    method: 'POST'
-    link: '/articles/#ID/reject'
+    method: 'GET'
+    link: '/articles/#ID/reject_feedback'
     button_classes: 'btn btn-outline-danger btn-sm mx-1'
   
   approve_private:
@@ -152,11 +152,18 @@ Comment:
     link: '/comments/#ID/approve'
     button_classes: 'btn btn-outline-success btn-sm mx-1'
   
-  soft_delete:
-    rel: 'transition:soft_delete'
+  reject:
+    rel: 'transition:reject'
+    title: 'Reject'
+    method: 'GET'
+    link: '/comments/#ID/reject_feedback'
+    button_classes: 'btn btn-outline-danger btn-sm mx-1'
+  
+  delete:
+    rel: 'transition:delete'
     title: 'Delete Comment'
     method: 'POST'
-    link: '/comments/#ID/soft_delete'
+    link: '/comments/#ID/delete'
     button_classes: 'btn btn-outline-danger btn-sm mx-1'
     confirm: 'Delete this comment?'
   
