--- a/config/hypermedia_actions.yml
+++ b/config/hypermedia_actions.yml
@@ -25,12 +25,6 @@ Article:
     method: 'GET'
     link: '/articles/#ID'
   
-  destroy:
-    rel: 'delete'
-    method: 'DELETE'
-    link: '/articles/#ID'
-    confirm: 'Are you sure?'
-  
   # FSM State Transitions
   submit:
     rel: 'transition:submit'
@@ -56,6 +50,7 @@ Article:
     rel: 'transition:archive'
     method: 'POST'
     link: '/articles/#ID/archive'
+    confirm: 'Are you sure you want to archive this article?'
   
   publish:
     rel: 'transition:publish'
@@ -99,12 +94,6 @@ Comment:
     rel: 'edit'
     method: 'GET'
     link: '/comments/#ID/edit'
-  
-  destroy:
-    rel: 'delete'
-    method: 'DELETE'
-    link: '/comments/#ID'
-    confirm: 'Are you sure you want to delete this comment?'
   
   # FSM State Transitions
   approve:
