Refactor Comment and Comment2 controllers for improved routing and link handling
- Added index action to redirect to the associated article for both Comment and Comment2 controllers.
- Updated hyperlink generation to include comment IDs for better link management.
- Modified button titles in CustomTemplate for clarity in navigation.
- Enhanced state transitions listing by sorting by creation date.
- Updated routes to include new paths for accessing comments and comment2s by article.

--- a/config/hypermedia_actions.yml
+++ b/config/hypermedia_actions.yml
@@ -70,9 +70,9 @@ Article:
 Comment:
   # Collection actions
   index:
-    rel: 'collection'
+    rel: 'article_comments'
     method: 'GET'
-    link: '/articles/#ARTICLE_ID/comments'
+    link: '/comments/#ID/article'
   
   new:
     rel: 'new'
@@ -190,9 +190,9 @@ Article2:
 Comment2:
   # Collection actions
   index:
-    rel: 'collection'
+    rel: 'article_comments'
     method: 'GET'
-    link: '/article2s/#ARTICLE2_ID/comment2s'
+    link: '/comment2s/#ID/article2'
   
   new:
     rel: 'new'
